--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           persist-credentials: false
       - name: Cache node-modules 💽
@@ -24,9 +24,9 @@ jobs:
           mkdir build
           cp -r img build/
           touch build/.nojekyll
-          ./node_modules/.bin/reveal-md --preprocessor ../../../includes.js --css custom.css --static build slides.md
+          ./node_modules/.bin/reveal-md --preprocessor includes.js --css custom.css --static build slides.md
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
